Added Remaining Sensors

--- a/Configs/temp_sensor_config.json
+++ b/Configs/temp_sensor_config.json
@@ -7,11 +7,11 @@
     "specifications":{
         "rating":"0.15wh",
         "range":"2m",
-        "poll_rate":30
+        "poll_rate":10
     },
     "output_format":{
         "Number":"Farhenheit in the range 0-100 degrees"
     },
     "type":"temperature",
-    "actions":["start", "stop", "poll_rate", "print"] 
+    "actions":["start", "stop", "print"] 
 }
